--- a/pages/chatbot.html
+++ b/pages/chatbot.html
@@ -152,6 +152,77 @@
         text-align: center;
     }
 }
+@media (max-width: 600px) {
+    body {
+        background: #ffdddd; /* fun pink */
+        font-size: 16px;
+        margin: 0;
+        height: 100%;
+        padding: 5px;
+    }
+
+    #chat-container {
+        width: 100% !important; /* force full width */
+        height: 90vh !important; /* almost full screen height */
+        padding: 10px !important;
+        box-sizing: border-box;
+    }
+
+    #chat {
+        flex: 1;
+        max-height: 75vh;
+        overflow-y: auto;
+        padding: 10px;
+    }
+
+    .message {
+        font-size: 14px !important;
+        padding: 8px 12px !important;
+        margin-bottom: 8px !important;
+        border-radius: 12px !important;
+        max-width: 85% !important;
+        word-wrap: break-word;
+    }
+
+    .user-message {
+        background-color: #2563eb !important; /* blue */
+        color: #fff !important;
+        align-self: flex-end !important;
+    }
+
+    .bot-message {
+        background-color: #e5e7eb !important; /* gray */
+        color: #111 !important;
+        align-self: flex-start !important;
+    }
+
+    #input-container {
+        flex-direction: column !important;
+        padding: 5px !important;
+    }
+
+    #userInput {
+        width: 100% !important;
+        padding: 12px !important;
+        font-size: 14px !important;
+        border-radius: 10px !important;
+        border: 1px solid #ccc !important;
+        margin-bottom: 5px !important;
+    }
+
+    #sendBtn {
+        width: 100% !important;
+        padding: 12px !important;
+        font-size: 16px !important;
+        border-radius: 10px !important;
+        background-color: #28a745 !important;
+    }
+
+    h2 {
+        font-size: 1.5em !important;
+        text-align: center !important;
+    }
+}
 
   </style>
 </head>
